# MIME

./: .gitignore  ARCHITECTURE_PLAN.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DOCUMENTATION_ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  MIME_NODE_TAXONOMY.md  README.md  RENDERING_PLAN.md  SECURITY.md  UMR_REPLICATION_PLAN.md  pyproject.toml
.github/ISSUE_TEMPLATE/: anomaly.yml
.github/workflows/: ci.yml
data/: defect_correction_validation.json
docker/: Dockerfile.usd-gl  build.sh
docs/: bibliography.bib  defect_correction_method.md  defect_correction_plan.md  jax_pallas_issues.md
examples/: deboer_replication.py  fsi_stepout_demo.py  visualise_helical_robot.py
jobs/: production_h100.yaml  rehearsal_a100.yaml
mime/: __init__.py
scripts/: analyze_dejongh_results.py  apply_lubrication_and_compare.py  check_anomalies.py  check_citations.py  check_impl_mapping.py  compute_confined_fstep.py  dejongh_benchmark.py  dejongh_dynamic_simulation.py  dejongh_record_usdc.py  experiment_helix_phase1.py  experiment_mfs_phase0.py  generate_mlp_training_data.py  generate_training_fill_v3.py  inspect_training_data.py  launch_job.py  launch_rehearsal.py  level2_pulsatile_swim.py  make_design_optimisation_figure.py  precompute_phaseB_tables.py  rehearse_192.py  retrain_mlp_v2.py  run_ar4_helical_drive.py  run_confinement_sweep.py  run_defect_correction_validation.py  run_overnight.sh  run_schwarz_sweep.py  t25_bem_cross_validation.py  test_dejongh_pipeline.py  test_offcenter.py  urdf_to_usd_scene.py  validate_calibrated_quick.py  validate_fin_resolution.py  validate_umr_at_128.py
tests/: conftest.py
(+277 files in other folders)
