[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mime-microrobotics"
version = "0.1.0"
description = "MIcrorobotics Multiphysics Engine — domain-specific physics for microrobot simulation"
readme = "README.md"
license = "LGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Nick" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    # MADDENING is not on PyPI yet — install locally:
    #   pip install -e /path/to/MADDENING
    # The version bound will be enforced once MADDENING is published.
    # "maddening>=0.1.0,<0.2",
    "jax>=0.4",
    "jaxlib>=0.4",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist",
]
docs = [
    "sphinx>=7.0",
    "myst-parser>=2.0",
    "sphinxcontrib-bibtex>=2.5",
    "pydata-sphinx-theme>=0.14",
]
viz = [
    "pyvista>=0.42",
]

[tool.hatch.build.targets.wheel]
packages = ["mime"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "verification: MIME-VER-* verification benchmarks",
]
